# ai-math-tutor

./: .env.example  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml  start.sh
tests/: test_chat.py  test_math_checker.py
tutor/: chat.py  math_checker.py  prompts.py
